Optimize data on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -167,7 +167,7 @@
         /* font-size: 62.5%; */
         scroll-behavior: smooth;
         scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
-        /* color: var(--text-color-dark); */
+        color: white;
     }
     html,
     body {
