--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
   --color-bg-secondary: #121212; /* Primer back #fff luego #121212 */
   --color-bg-tertiary: #1F1F1F; /* Segundo back #f5f */
   --color-hover: #2a2a2a;
+  --color-hover-2: #333333; /* botones que tengan el bg tertiary #1f1f1f
 
   --text-primary: #FFFFFF; /* Títutlos y textos principales */
   --text-primary-2: #FFFFFFB2; /* "Mostrar todos..." */
